samples/_failures_safe/1761451280_1f302f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f4d8921.c: In function ‘main’:
./samples/SAFE/__tmp_3f4d8921.c:169:1: error: expected declaration or statement at end of input
  169 | int main(void) {
      | ^~~
